Create a term form element when edit media (#13097)
* Issue #13005 - Enable rest ui and add Vocabulary resource

* Issue #13005 - Create custom rest resource

* Issue #13005 - Create new taxonomy rest resource

* Issue #13005 - Start refactoring uiselect into select2

* Issue #13005 - Implement terms selection with simple jquery (WIP)

* Issue #13005 - Naming fix

* Issue #13005 - Remove unused modules

* Issue #13005 - Remove restui

* Issue #13005 - Implement form type

* Issue #13005 - Line fix

* Issue #13005 - Move js code into ng-switch case

* Issue #13005 - Fix entity type

* Issue #13005 - Fix terms collect

* Issue #13005 - Finally loaded the media terms

* Issue #13005 - Save terms properly

* Issue #13005 - Fix angular version and set the highest compatible versions

* Issue #13005 - Convert library files into npm package files

* Issue #13005 - Fixing taxonomy term tree widget

* Issue #13005 - Naming fix

* Issue #13005 - Create basic test for vocabulary resource

* Issue #13005 - Create basic tests for vocabulary edit on files edit popup

* Issue #13005 - Refactor with loaded entity

* Issue #13005 - Little CSS fixes and add classes

* Issue #13005 - Fix group

* Issue #13005 - Fix test with ABC order

* Issue #13005 - Fix cache dependency name when not is vsite

* Issue #13005 - Naming fix

* Issue #13005 - Create test for taxonomy resource

* Issue #13005 - Fix A11y label for

* Issue #13005 - Fix A11y issues

* Issue #13005 - Fix label issue, and css fix

Co-authored-by: Balázs Sztreha <balazs.sztreha@cheppers.com>

--- a/profile/modules/os/js/FileEditor/file_edit_base.html
+++ b/profile/modules/os/js/FileEditor/file_edit_base.html
@@ -20,14 +20,13 @@
 <input id="fe-file-timestamp" type="text" ng-model="date" class="form-text" ng-class="{error: invalidDate}">
 
 <div class="fe-replace-wrapper" ng-show="!file.new && !file.replaced && (file.schema == 'public' || file.schema == 'private')">
-    <label for="fe-file-replace"></label>
     <button id="fe-file-display-warning" ng-show="!showWarning && !showSuccess" ngf-select ngf-multiple="false" ngf-accept="validate($file)" ngf-change="prepForReplace($files, $event)" accept="{{extension}}">Replace File</button>
     <div class="description"><em>Warning:</em> replacing the existing file cannot be undone.</div>
     <div class="fe-replace-message error" ng-show="replaceReject">Selected file does not match extensions!</div>
 <div class="fe-replace-message success" ng-show="replaceSuccess">Successfully replaced file.</div>
 </div>
 
-<taxonomy-widget entity-type="file" terms="file.terms" bundle="{{file.type}}"></taxonomy-widget>
+<taxonomy-widget entity-type="media" terms="file.terms" bundle="{{file.type}}"></taxonomy-widget>
 </div>
 </fieldset>
 
